--- a/TMSA/frmPublishers.resx
+++ b/TMSA/frmPublishers.resx
@@ -312,6 +312,178 @@
         IUBkkBAgMkgIEBkkBIgMEgJEBgkBIoOEAJFBQoCoVNX/AHKkAm2Zn08RAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="tsNewPublisherCards.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAYAAADL1t+KAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAACa8SURBVHhe7d172O33fObxnOQciRCJ0EhQh8aplLTppE5F
+        HauO1YmoQ2UwRYNwjUGZ0miKGT0QTa4yTjM6wzgEo2OGigwjxaV1iBAhlERIiMg5M/e3sSc72733fr7r
+        Xt+1fmt93q/rev+T7OzD77m/v5X9POtZawcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAmNH/JaKFdoV6jAKAuXI3HCIa2zXqGQoA5sbdbIhofO1B/VkK
+        AObC3WiIaDG1B/XjFADE3E2GiBbbSxQARNzNhYgW3wkKAGbmbixEtJz+RAHATNxNhYiW11+qHRUAdHE3
+        FCJabiepnRQAbJi7mRDR8nur2kUBwIa4GwkRTaOTFX9TB7Ah7iZCRNPpb9QNFABsk7uBENG0er/aXQHA
+        VrmbBxFNrw+qPRQAWO7GQUTT7KNqbwUAP8PdNIhoun1c3VABwPW4GwYRTbtPq/0VAPx/7mZBRNPvdLWv
+        AoB/5m4URLQafUHdTAGAvUkQ0er0JXWwAlCcu0EkARW5s7DIzlS3UAAKczeHJKAidxYW3Tnq1gpAUe7G
+        kARU5M7CMvqmuo0CUJC7KSQBFbmzsKy+ow5XAIpxN4QkoCJ3FpbZeerOCkAh7maQBFTkzsKy+4G6hwJQ
+        hLsRJAEVubMwhS5Uv6wAFOBuAklARe4sTKWL1X0UgDXnbgBJQEXuLEypS9T9FIA15g5/ElCROwtTqz2o
+        P0ABWFPu4CcBFbmzMMUuV49QANaQO/RJQEXuLEy19qD+KAVgzbgDnwRU5M7ClLtKPUEBWCPusCcBFbmz
+        MPXag/qTFIA14Q56ElCROwur0DXqmQrAGnCHPAmoyJ2FpJ+Yfzaq9qD+bAVgxbkDngRU5M5C0r1Ue0EY
+        9+9G9SIFYIW5g50EVOTOQlJzlPqRcv9+VC9VAFaUO9RJQEXuLCRtcqS6SLkfM6oTFIAV5A50ElCROwtJ
+        m7ubukC5HzeqExWAFeMOcxJQkTsLSVu6qzpfuR87qterHRWAFeEOchJQkTsLSc4d1LeV+/GjeqPaSQFY
+        Ae4QJwEVubOQtDW3U+cq99+M6m1qFwVg4twBTgIqcmchaVsOVV9T7r8b1X9SN1AAJswd3iSgIncWkrbn
+        EHWWcv/tqN6rdlMAJsod3CSgIncWkjbiIPUF5f77UZ2qdlcAJsgd2iSgIncWkjbqQPV55X6OUX1I7aEA
+        TIw7sElARe4sJPU4QH1OuZ9nVB9T+ygAE+IOaxJQkTsLSb32U59U7uca1WnqhgrARLiDmgRU5M5C0iz2
+        Vacr9/ON6gx1YwVgAtwhTQIqcmchaVZ7qY8o93OO6jPqJgrAkrkDmgRU5M5CUmJP9WHlft5RfVHdTAFY
+        Inc4k4CK3FlISrXvF3+Pcj/3qL6sbq4ALIk7mElARe4sJM3Drupdyv38ozpbHaYALIE7lElARe4sJM3L
+        zuotyv0aozpH3VoBWDB3IJOAitxZSJqn9qD+JuV+nVF9U/28ArBA7jAmARW5s5A0b+0tUE9R7tca1XfV
+        HRWABXEHMQmoyJ2FpBF2VK9T7tcb1XnqzgrAArhDmARU5M5C0ijtQf01yv2ao/qBuqcCMJg7gElARe4s
+        JI32cuV+3VFdpH5FARjIHb4koCJ3FpIW4QXK/dqj+rG6jwIwiDt4SUBF7iwkLcrxyv36o7pE/boCMIA7
+        dElARe4sJC3SM9Q1yv0+RnSZepgCMGfuwCUBFbmzkLRox6qrlfu9jOhy9QgFYI7cYUsCKnJnIWkZnqIW
+        +aB+hXq0AjAn7qAlARW5s5C0LI9XVyr3exrRVeoYBWAO3CFLAipyZyFpmR6r2t+e3e9rRO1B/ckKQMgd
+        sCSgIncWkpbtoepS5X5vI2pPyvt9BSDgDlcSUJE7C0lT8CC16Af15ygAM3IHKwmoyJ2FpKm4t7pYud/j
+        qP6tAjADd6CSgIrcWUiakqPUj5T7fY7qBAWgkztMSUBF7iwkTc2Rqr0eu/u9jooHdaCTO0hJQEXuLCRN
+        0d3UBcr9fkf1p6q9QxyADXCHKAmoyJ2FpKm6qzpfud/zqN6gdlIAtsMdoCSgIncWkqbsDurbyv2+R/VX
+        igd1YDvc4UkCKnJnIWnqbqfOVe73Pqq3q10UgK1wBycJqMidhaRVcKg6W7nf/6j+s7qBAmC4Q5MEVOTO
+        QtKqOESdpdyfYVTvU7spAFtwByYJqMidhaRVcpD6gnJ/jlF9QO2hAGzGHZYkoCJ3FpJWzYHq88r9WUb1
+        v9TeCsBPuYOSBFTkzkLSKjpAfU65P8+o/k7towCIOyRJQEXuLCStqv3UJ5X7M43qNHVDBZTnDkgSUJE7
+        C0mrbF91unJ/rlGdoW6sgNLc4UgCKnJnIWnV7aU+otyfbVSfVe3T/kBZ7mAkARW5s5C0DvZUH1buzzeq
+        L6qDFVCSOxRJQEXuLCSti/b94u9R7s84qi+rmyugHHcgkoCK3FlIWie7qncp9+cc1dfVYQooxR2GJKAi
+        dxaS1s3O6i3K/VlH9Q11GwWU4Q5CElCROwtJ66g9qL9JuT/vqL6jfkEBJbhDkARU5M5C0rpqb4F6inJ/
+        5lF9V91JAWvPHYAkoCJ3FpLW2Y7qdcr9uUd1vrqLAtaaG38SUJE7C0nrrj2ov0a5P/uoLlRHKGBtueEn
+        ARW5s5BUxcuV+/OP6iL1KwpYS270SUBF7iwkVfIC5a7BqH6s7quAteMGnwRU5M5CUjXHK3cdRnWJur8C
+        1oobexJQkTsLSRU9Q12j3PUY0WXq4QpYG27oSUBF7iwkVXWsulq5azKiy9VvKWAtuJEnARW5s5BU2VPV
+        Ih/Ur1JHK2DluYEnARW5s5BU3ePVlcpdmxG1B/UnKmCluXEnARW5s5CEHXZ4rLpCueszovZZgScrYGW5
+        YScBFbmzkIRrPVS1J6+5azSi9qS8ZylgJblRJwEVubOQhOs8SF2q3HUaUXtQ/wMFrBw36CSgIncWknB9
+        91YXK3etRvViBawUN+QkoCJ3FpLws45SP1Lueo3qBAWsDDfiJKAidxaS4B2pfqjcNRvVqxSwEtyAk4CK
+        3FlIwtbdXV2g3HUb1V+o9g5xwKS58SYBFbmzkIRtu6tq73Hurt2oTlI7KWCy3HCTgIrcWUjC9t1BfVu5
+        6zeqkxUP6pgsN9okoCJ3FpKwMbdT31LuGo7qHWoXBUyOG2wSUJE7C0nYuEPV2cpdx1G9U91AAZPixpoE
+        VOTOQhL6HKLOUu5ajur9ancFTIYbahJQkTsLSeh3kPqCctdzVB9UeyhgEtxIk4CK3FlIwmwOVJ9X7pqO
+        6qNqbwUsnRtoElCROwtJmN0B6nPKXddRfVzto4ClcuNMAipyZyEJmf3UJ5W7tqP6tNpfAUvjhpkEVOTO
+        QhJy+6rTlbu+o/p7dWMFLIUbZRJQkTsLSZiPvdRHlLvGo/qsap/2BxbODTIJqMidhSTMz57qw8pd51F9
+        SR2sgIVyY0wCKnJnIQnztZt6j3LXelRnqlsoYGHcEJOAitxZSML87arepdz1HtU56lYKWAg3wiSgIncW
+        kjDGzuqtyl3zUX1D3UYBw7kBJgEVubOQhHHag/qblLvuo/qOOlwBQ7nxJQEVubOQhLHaW6Ceoty1H9V5
+        6k4KGMYNLwmoyJ2FJIy3o3qdctd/VD9Q91DAEG50SUBF7iwkYTHag/prlfsYjOpCdYQC5s4NLgmoyJ2F
+        JCzWy5X7OIzqInWkAubKjS0JqMidhSQs3guU+1iM6sfqfgqYGze0JKAidxaSsBzHK/fxGNUl6gEKmAs3
+        siSgIncWkrA8x6lrlPu4jOhy9ZsKiLmBJQEVubOQhOU6Vl2t3MdmRO1B/ZEKiLhxJQEVubNA1NNV6mgF
+        zMwNKwmoyJ0Fot7ag/rvKmAmblRJQEXuLBDNUvv6/TMV0M0NKgmoyJ0FollrD+rPVkAXN6YkoCJ3FoiS
+        2oM60MUNKQmoyJ0FojSgixtRElCROwtEaUAXN6IkoCJ3FojSgC5uRElARe4sEKUBXdyIkoCK3FkgSgO6
+        uBElARW5s0CUBnRxI0oCKnJngSgN6OJGlARU5M4CURrQxY0oCajInQWiNKCLG1ESUJE7C0RpQBc3oiSg
+        IncWiNKALm5ESUBF7iwQpQFd3IiSgIrcWSBKA7q4ESUBFbmzQJQGdHEjSgIqcmeBanW1+WdpQBc3oiQA
+        qMrdE5OALm5ESQBQlbsnJgFd3IiSAKAqd09MArq4ESUBQFXunpgEdHEjSgKAqtw9MQno4kaUBABVuXti
+        EtDFjSgJAKpy98QkoIsbURIAVOXuiUlAFzeiJACoyt0Tk4AubkRJAFCVuycmAV3ciJIAoCp3T0wCurgR
+        JQFAVe6emAR0cSNKAoCq3D0xCejiRpQEAFW5e2IS0MWNKAkAqnL3xCSgixtREgBU5e6JSUAXN6IkAKjK
+        3ROTgC5uREkAUJW7JyYBXdyIkgCgKndPTAK6uBElAUBV7p6YBHRxI0oCgKrcPTEJ6OJGlAQAVbl7YhLQ
+        xY0oCQCqcvfEJKCLG1ESAFTl7olJQBc3oiQAqMrdE5OALm5ESQBQlbsnJgFd3IiSAKAqd09MArq4ESUB
+        QFXunpgEdHEjSgISe6tbqTuru6vD1UFqFwVMnbsnJgFd3IiSgB63U89V71VfU9cot6vWV9RJ6nHqAAVM
+        jdttEtDFjSgJ2J491NPVl5Xb0Ea6XL1J3UUBU+G2mgR0cSNKArZmR/UMdZ5y25m1U9XBClg2t88koIsb
+        URLg3F79b+U2M48uUo9VwDK5bSYBXdyIkoAt3Ue1B1y3l3nWvv7+bxSwLG6XSUAXN6IkYHO/rS5Tbiuj
+        Ol4By+D2mAR0cSNKAjZ5iLpKuZ2M7l8rYNHcFpOALm5ESUBzT/UT5TayiK5Wv6aARXJbTAK6uBElAbup
+        5FvS5lX7PeypgEVxO0wCurgRJQEvVW4by+gEBSyK22AS0MWNKAm1/Zy6VLltLKMfK15VDoviNpgEdHEj
+        SkJtf67cLpbZiQpYBLe/JKCLG1ES6rqJukS5XSyzHyq+lo5FcPtLArq4ESWhrt9XbhNT6AkKGM1tLwno
+        4kaUhLo+rtwmptCHFTCa214S0MWNKAk17aPa9367TUyhK1R7r3VgJLe9JKCLG1ESamov4uL2MKUerICR
+        3O6SgC5uREmo6VnK7WFKvUoBI7ndJQFd3IiSUNObldvDlPqIAkZyu0sCurgRJaGmzyu3h1n7rjp3i3+W
+        9k8KGMntLgno4kaUhJrm/UYsD1eP2+KfzaP9FTCK21wS0MWNKAn17KzcFpJuqm6k5v3M+TspYBS3uSSg
+        ixtREupp37LmtjBr31ebnKXcj5m1eylgFLe5JKCLG1ES6jlIuS3M2jlqk/cr92Nm7REKGMVtLgno4kaU
+        hHpurdwWZu2LapM3KfdjZu3JChjFbS4J6OJGlIR6bqvcFmbt62qT1yr3Y2bteQoYxW0uCejiRpSEem6s
+        3BZm7WK1yYuV+zGz9koFjOI2lwR0cSNKQj3tWe7zfjb6rqo5Trl/P2uvVsAobnNJQBc3oiTU1J6Z7vYw
+        a7dRzQuV+/ez9goFjOI2lwR0cSNKQk1fUW4Ps/abqvlD5f79rL1EAaO4zSUBXdyIklDTacrtYdaOV80f
+        K/fvZ23TzwuM4DaXBHRxI0pCTScrt4dZa9+u1sz7We7tXeGAUdzmkoAubkRJqKl9O5jbw6x9STXz/h+F
+        YxUwittcEtDFjSgJNT1EuT3M2jWqvZ77Bzf7Z/PoGAWM4jaXBHRxI0pCTYcpt4ekR6l5vy3rAxUwittc
+        EtDFjSgJNe2kLlFuE7PWvmf8gi3+WRrvtoaR3OaSgC5uREmo62PKbWLWzlTtU+/u381ae1U7YBS3uSSg
+        ixtREur6I+U2MZUuVTsqYBS3uySgixtREuq6v3KbmEpfVcBIbndJQBc3oiTUtZe6QrldTKG/U8BIbndJ
+        QBc3oiTUdoZyu5hC71DASG53SUAXN6Ik1HaicruYQi9TwEhud0lAFzeiJNT2q8rtYgo9VgEjud0lAV3c
+        iJJQW/t+9O8qt41ld0cFjOR2lwR0cSNKAt6s3DaW2ZVqNwWM5LaXBHRxI0oC2ku2um0ss/YiNcBobntJ
+        QBc3oiRgb3WZcvtYVu9WwGhue0lAFzeiJKBpD6BuH8vqlQoYzW0vCejiRpQENI9Qbh/L6tEKGM1tLwno
+        4kaUBDS7qu8pt5FldIgCRnPbSwK6uBElAZucpNxGFt15ClgEt78koIsbURKwyVHKbWTRvV8Bi+D2lwR0
+        cSNKAjZpb1X6deV2ssheooBFcPtLArq4ESUBm3uBcjtZZA9UwCK4/SUBXdyIkoDN3URdqtxWFtE1an8F
+        LILbYBLQxY0oCdjS25TbyiL6qgIWxW0wCejiRpQEbOlI5bayiP5aAYviNpgEdHEjSgKcTyu3l9E9QQGL
+        4jaYBHRxI0oCnKcqt5fR3VIBi+I2mAR0cSNKApz21qXfVm4zo+Lr51g0t8MkoIsbURKwNc9XbjOjOlkB
+        i+R2mAR0cSNKArZmP/VD5XYzomMUsEhuh0lAFzeiJGBb2tuYut2M6BYKWCS3wySgixtRErAtB6vLlNvO
+        PDtbAYvmtpgEdHEjSgK2543KbWeevV4Bi+a2mAR0cSNKAranvTf56L+lP0QBi+a2mAR0cSNKAjai/Q3a
+        7Wcetf9Z2EsBi+b2mAR0cSNKAjaiPWFt1Ju2/KMClsHtMQno4kaUBGzUicptaB49VgGL5raYBHRxI0oC
+        NupA9RPldpT2DcWn3bFobotJQBc3oiRgow5QVym3o3n0KgUsktthEtDFjSgJ2KhjldvQvGr/s3BXBSyK
+        22ES0MWNKAnYqFOV29A8+5jaUQGL4DaYBHRxI0oCNuJG6grlNjTv/kABi+D2lwR0cSNKAjbiaOX2M6KL
+        1WEKGM3tLwno4kaUBGzEh5Tbz6hOVzsrYCS3vSSgixtRErA97dvVrlRuPyN7jgJGcrtLArq4ESUB2zP6
+        2e1bi0+9YzS3uySgixtRErA9H1VuO4uoPeudT71jFLe5JKCLG1ESsC2HqmuU286iepkCRnB7SwK6uBEl
+        AdtynHK7WWTt2+WOUMC8ub0lAV3ciJKAbfmMcrtZdN9U7XvhgXlyW0sCurgRJQFbc1vlNrOs/loB8+R2
+        lgR0cSNKArbmFcptZpk9XgHz4jaWBHRxI0oCnF3Ud5TbzDK7VN1NAfPgNpYEdHEjSgKcByu3lyl0ltpP
+        ASm3rySgixtREuC8U7m9TKX3Kd6VDSm3rSSgixtRErClm6jLldvLlHqhAhJuV0lAFzeiJGBLT1duK1Or
+        fX/6rylgVm5XSUAXN6IkYEufUm4rU+x8xeu9Y1ZuU0lAFzeiJGBzv6DcTqbcP6obKqCX21MS0MWNKAnY
+        3L9XbidJ7VPj7p/Ps1MVb+KCXm5LSUAXN6IkYJO91EXK7STp+ep/bvHPRnSyAnq4HSUBXdyIkoBNjlFu
+        I0lXqpupW6kf/vSfjexpCtgot6EkoIsbURKwySeV20jSe9Umj1Lux8yzq9XjFLARbkNJQBc3oiSguZNy
+        +0h7jNrcm5X7cfOsvTzsvRSwPW4/SUAXN6IkoHm9cvtI+p7aVW1ud3WGcj9+nl2ijlTAtrjtJAFd3IiS
+        gH3UxcrtI+l1yrmlukC5/2aetV+jfRsesDVuN0lAFzeiJODJym0jbVvvivZb6hrl/rt5dra6uQIct5kk
+        oIsbURIw4lPg/0dtz58o99/Ou6+ogxWwJbeXJKCLG1ESamtPHnO7SHui2p6d1IeU++/n3TnqUAVszm0l
+        CejiRpSE2ka8TWp7cZr2IjUbcZD6pnI/z7z7kmq/HrCJ20kS0MWNKAl1tRd7uUq5XSS1l4/tcQc14hXq
+        XGcpvqaOTdxGkoAubkRJqOsE5TaR1r6nvdcjVXtRGPfzzbsvqkPUMtxAtVfOu6O6t/r1n/Ybqn3P/uY9
+        SB2hfl7dWO2oMF9uH0lAFzeiJNS0p/q+cptIOk3N6kXK/ZwjOlcdrualvTHMz6mj1BPUi1V7bfn2Snmn
+        q/bEvHl8FuIH6nOqfankFerRii8jzM5d4ySgixtREmpqr3nu9pDWHsxm1f4G+jblft4Rtf+h+VXVo30P
+        ffvb9PNUe8BubzrzNbWId5TbVmeqv1T3V+2zANgYdy2TgC5uREmopz1w/oNye0hqL+Syh0q0V5Ib8Zry
+        W+sn6mFqS+1vve1T3u2B+xT1KfUj5X6OqXWheoO6vcK2ueuXBHRxI0pCPe1vcW4Lae1r8vNwU9U+Re1+
+        jRG1d4Rrn+5vvVu1T8e7H7dqtRfueb+6u4LnrlsS0MWNKAn1/HfltpDUHhTn+USz9j3j31bu16K+2pMN
+        /0q1/1HC9bnrlQR0cSNKQi13USNecrU9SWve2rPl25PA3K9H/bXnDNxP4TruOiUBXdyIklDLW5TbQVrv
+        k8s2qv287evc7tek/tqT945VuJa7RklAFzeiJNTRPiU+4tnYn1YjPVS1T+m7X5tmq31bHfy1SQK6uBEl
+        oY7XKLeBtKPVaO3XGPGqdlVrX3Z5nKrOXZskoIsbURJq2E+N+Larf1K7qpHat189V31Lud8DzVb7UsYv
+        qcrcdUkCurgRJaGGFyr38U97iZq39r3o7cVb/ky1F21xvy7Npy+rXVRV7pokAV3ciJKw/toDZPubtPv4
+        J12q5vWtUO1lU/+Vai+Veolyvx6NqfKT5Nz1SAK6uBElYf09W7mPfdpfqFm1lydtb0ryHxR/C19u56sb
+        qorc9UgCurgRJWG9ta9vj3i/8fZiJbdVPdpnCh6s2suS8vXwafV0VZG7FklAFzeiJKy3UW/C8i61Ee1t
+        P5+k2o//sXI/Fy2/D6iK3LVIArq4ESVhfY3623lrW8+OPli1T/O3t1Jd1HucU9blah9VjbsWSUAXN6Ik
+        rK/2N2P3MU/7uNrSjVT79drf9Jb9VqI0W+5d59aduw5JQBc3oiSsp53VWcp9zNMerpr2ve2/q05V7W94
+        7sfS6tTeKrYadx2SgC5uRElYT+2V1dzHO609I/2R6r+oy376z2g9+lNVjbsOSUAXN6IkrJ/2t/MvKffx
+        pmnV3iK2fZmivVvd5v1X9VH1edW+I2ARb1DzVlWNuw5JQBc3oiSsn/ZpcPexpmnWnjj4FdUewN+uTtqs
+        N6pND/JnKvffz6v/pqpx1yEJ6OJGlIT10p7Z/nXlPtZE26r9D0Q17jokAV3ciJKwXp6p3MeZaHu9TFXj
+        rkMS0MWNKAnrY0814jXbqUbttfSrcdchCejiRpSE9XG8ch9joo30CFWNuw5JQBc3oiSsh33VBcp9jOna
+        75P/hDpRPUZ9TLkfV7n2jnfVuOuQBHRxI0rCemhf/3Qf36q1Z45/Wv2xup/aQ22ufWvfS9VVyv331Wrf
+        5liRuxZJQBc3oiSsvoPUj5T7+FaqvTLe69Wj1P5qI45U7Xu93c9XqfY/PhW5a5EEdHEjSsLqa9+r7D62
+        696F6m/UU9Ut1azae7M/X1V9N7gr1SGqInc9koAubkRJWG13UlU+bXyNOkP9kfoXahc1T+1Brb24ivu1
+        17l3qKrc9UgCurgRJWE1HaBerL6j3Md1Xfqeaq+edow6UC1Ce/OZc5T7/axbF6uKT4bbxF2TJKCLG1ES
+        Vsud1SnqUuU+nuvQV9Wr1a+p9uS1ZdhdPUedp9zvcV16rqrMXZMkoIsbURKmb0fV3qv6NOU+hqte+xru
+        36pnq0PVlLSX0n2aWsfPhLxFtW1V5q5LEtDFjSgJ07WTam9V+knlPnar3KYH8fZStavwKd8bqVeqdXni
+        XNtUe2XB6ty1SQK6uBElYXra3wqfor6s3MdsVWsP4h9Wv6duolZRe+7CC9UqvwHO+9Q+Cv76JAFd3IiS
+        MB17qfY1zfYe2e5jtYqtw4O40z578lB1qmovYuP+7FOrfTfECWpZz0uYInedkoAubkRJWL72KmbHqXV5
+        AlZ74FjHB/GtOUy1B8opvzFOe/GcIxSuz12rJKCLG1ESlqc9k/pZal3eIe0zqv2Pyc1URe1vvvdVJ6v2
+        7XbuGi2y9j9W7fvqH6jaZxTws9x1SwK6uBElYfHa18ifoc5V7mOySn1DtZcNPVzhOu0B9BdVewW6D6j2
+        qnbu+s279uI77bkX/05V/v7yjXLXMAno4kaUhMVpN/knqfYg6D4Wq9JFqv0t9N6Kv/ltTLtO7X962pMd
+        X6s+pNqL17QHYHeNN9Ilqj14f1D9oXqQ2uhr2ONa7romAV3ciJKwGO1TsZ9V7mOwCrUnfrWvi/+O2vKd
+        yzC79jryN1ft69vtFeraW7u216Zv3/u+qSeq9s9bv6Ha/xjsp5BzW08CurgRJWGs26v2bULu2q9C7R3M
+        XqT49C3Wkdt8EtDFjSgJY7Q3+ninWpVvadq881V71jZfF8e6c/tPArq4ESVhvtozndtLmLavM7vrPeU+
+        pdrX+Nv3wwMVuHOQBHRxI0rC/NxD/b1y13mqtXfbau+nfjcFVOPORBLQxY0oCbl91Z+rVfr0entHs/at
+        czdUQFXubCQBXdyIkpB5nFq1F4ZpL8d6RwVU585HEtDFjSgJszlQreqz19v3QQPw5yMJ6OJGlIR+/1Kt
+        4pPeWt9SeysA/owkAV3ciJKwce09sdu3ornruCq1F4YBcC13RpKALm5ESdiY9gz2M5W7hqvSJ9SOCsC1
+        3DlJArq4ESVh+56urlDu+q1K7Z232puFALiOOytJQBc3oiRsXXtXtFOUu26r1isVgOtzZyUJ6OJGlASv
+        fb38b5W7ZqtWez32PRWA63PnJQno4kaUhJ/Vvkf7bOWu16rVPtX+ywrAz3JnJgno4kaUhOtrT377vnLX
+        ahV7gwLguTOTBHRxI0rCdR6gLlHuOq1iX1O80Qqwde7cJAFd3IiScK17qnV6MG89RAHYOndukoAubkRJ
+        2GGHw9R3lbs+q9pbFYBtc2cnCejiRpRU3T7qC8pdm1Xtm6o9Sx/AtrnzkwR0cSNKqu7tyl2XVa29het9
+        FYDtc2coCejiRpRU2dOUuyar3IkKwMa4M5QEdHEjSqrqpmpV3zFta31O7aYAbIw7R0lAFzeipKreqNz1
+        WNUuVYcrABvnzlIS0MWNKKmi26v2Cmrueqxqz1YA+rizlAR0cSNKqui1yl2LVe19irdFBfq585QEdHEj
+        Sqpmd7VOL+36VbWfAtDPnakkoIsbUVI1j1LuOqxi7ZXt7qwAzMadqySgixtRUjWvVu46rGJHKwCzc+cq
+        CejiRpRUzWnKXYdV688UgIw7W0lAFzeipEraE8d+otx1WKU+oXZVADLufCUBXdyIkippD+juGqxSX1c3
+        UwBy7owlAV3ciJKqcddgVfqeup0CMB/unCUBXdyIkqq5RrnrMPXaM9qPUADmx521JKCLG1FSNav4PehX
+        qocoAPPlzlsS0MWNKKmadyt3HaZaezvU31YA5s+duSSgixtRUjXHKXcdptrzFIAx3JlLArq4ESVV84vK
+        XYep1f5m/lQFYBx39pKALm5ESdXspNr7hrtrMZXag/lTFICx3PlLArq4ESVV9FDlrsUUak+A+x0FYDx3
+        BpOALm5ESVVN8SVgL1ePVAAWw53DJKCLG1FSVfdQlyl3TZZR+3a6eysAi+POYhLQxY0oqbL2VqpTeKGZ
+        z6hbKACL5c5jEtDFjSipulcod10W1dvVvgrA4rkzmQR0cSNKqq69YcvL1KL/pv5DdYwCsDzubCYBXdyI
+        knCtB6kLlbtG86z9j8NJan8FYLncGU0CurgRJeE6d1AfVe46zaN/UA9TAKbBndMkoIsbURKur30K/mh1
+        rnLXa5bOUO3b0dqL2gCYDndek4AubkRJ8HZR7UH4f6hZvr5+kXq9+iUFYJrc2U0CurgRJWH7bq1+T/1H
+        dbba8hpeqto/b5+ub0+wO0rtqgBM25ZnOQ3o4kaUhNnspm6k+JYzYHW5e2IS0MWNKAkAqnL3xCSgixtR
+        EgBU5e6JSUAXN6IkAKjK3ROTgC5uREkAUJW7JyYBXdyIkgCgKndPTAK6uBElAUBV7p6YBHRxI0oCgKrc
+        PTEJ6OJGlAQAVbl7YhLQxY0oCQCqcvfEJKCLG1ESAFTl7olJQBc3oiQAqMrdE5OALm5ESQBQlbsnJgFd
+        3IiSAKAqd09MArq4ESUBQFXunpgEdHEjSgKAqtw9MQno4kaUBABVuXtiEtDFjSgJAKpy98QkoIsbURIA
+        VOXuiUlAFzeiJACoyt0Tk4AubkRJAFCVuycmAV3ciJIAoCp3T0wCurgRJQFAVe6emAR0cSNKAoCq3D0x
+        CejiRpQEAFW5e2IS0MWNKAkAqnL3xCSgixtREgBU5e6JSUAXN6IkAKjK3ROTgC5uREkAUJW7JyYBXdyI
+        kgCgKndPTAK6uBElAUBV7p6YBHRxI0oCgKrcPTEJ6OJGlAQAVbl7YhLQxY0oCQCqcvfEJKCLG1ESAFTl
+        7olJQBc3oiQAqMrdE5OALm5ESQBQlbsnJgFd3IiSAKAqd09MArq4ESUBQFXunpgEdHEjSgKAqtw9MQno
+        4kaUBABVuXtiEtDFjSgJAKpy98QkoIsbURIAVOXuiUlAFzeiJACoyt0Tk4AubkRJAFCVuycmAV3ciJIA
+        oCp3T0wCurgRJQFAVe6emAR0cSNKAoCq3D0xCejiRpQEAFW5e2IS0MWNKAkAqnL3xCSgixtREgBU5e6J
+        SUAXN6IkAKjK3ROTgC5uREkAUJW7JyYBXdyIkgCgKndPTAK6uBElAUBV7p6YBHRxI0oCgKrcPTEJ6OJG
+        lAQAVbl7YhLQxY0oCQCqcvfEJKCLG1ESAFTl7olJQBc3oiQAqMrdE5OALm5ESQBQlbsnJgFd3IiSAKAq
+        d09MArq4ESUBQFXunpgEdHEjSgKAqtw9MQno4kaUBABVuXtiEtDFjSgJAKpy98QkoIsbURIAVOXuiUlA
+        FzciIiJafkAXNyIiIlp+QBc3IiIiWn5AFzciIiJafkAXNyIiIlp+QBc3IiIiWn5AFzciIiJafkAXNyIi
+        Ilp+QBc3IiIiWn5AFzciIiJafkAXNyIiIlp+QBc3IiIiWn5AFzciIiJafkAXNyIiIlp+QBc3IiIiWn5A
+        FzciIiJafkAXNyIiIlp+QBc3IiIiWn5AFzciIiJafkAXNyIiIlp+AAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANBphx3+HzDWlJBLc5OyAAAAAElFTkSu
+        QmCC
+</value>
+  </data>
   <data name="tsDeleteAssignments.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAYAAAA+s9J6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -1144,6 +1316,9 @@
         /wMK85YSvKWHtQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="tMSADataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="picturePictureBox.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAgEARwBHAAD/7gAOQWRvYmUAZAAAAAAB/+EJYEV4aWYAAE1NACoAAAAIAAcBEgAD
@@ -1436,6 +1611,12 @@
         Yq7FXYq7FXYq7FXYq//Z
 </value>
   </data>
+  <metadata name="_shared_in_ministry.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="publisher_field_service_report_viewBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1038, 17</value>
+  </metadata>
   <metadata name="publisher_field_service_report_viewBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1038, 17</value>
   </metadata>
@@ -1453,6 +1634,12 @@
   </metadata>
   <metadata name="publisher_field_service_report_viewTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 60</value>
+  </metadata>
+  <metadata name="_shared_in_ministry.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="label5.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>False</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>58</value>
